--- a/Relazione/Relazione_MSA.tex
+++ b/Relazione/Relazione_MSA.tex
@@ -310,6 +310,37 @@ Questa classe implementa dei metodi per accedere ai servizi \textit{AWS SQS} med
 \item 	{\textit{deleteMessageFromQueue}: cancella un messaggio dalla coda dedicata identificata dal suo \textit{URL}, entrambi passati come argomento. Usa l'\textit{API AWS SDK deleteMessage}.}
 \end{itemize}
 \subsubsection{\textit{Fragment}}
+Un \textit{Fragment} rappresenta un ambiente oppure una porzione dell'interfaccia in una Activity. Si pu\'o pensare a un \textit{Fragment} come sezione modulare di un'attivit\'a che ha un proprio ciclo di vita, riceve i propri eventi di input e che \'e possibile aggiungere o rimuovere mentre l'attivit\'a \'e in esecuzione. 
+\'E possibile combinarne diversi in una singola \textit{activity} per costruire una \textit{multi-pane UI}, e questo \'e quello che ci ha spinti all'utilizzo degli stessi.
+\\Nella fase di inizializzazione dei \textit{Fragment} vengono eseguiti gli \textit{AsyncTask}. \\L'\textit{AsyncTask} consente l'uso corretto e semplice del \textit{thread UI}. Tale classe permette di eseguire operazioni in background e pubblicare risultati sul thread dell'interfaccia utente senza dover manipolare i \textit{threads} e/o \textit{handlers}. Un \textit{AsyncTask} ha il compito di eseguire una porzione di codice su un \textit{thread} in background, il cui risultato viene pubblicato sul \textit{thread UI}.
+
+Nella nostra applicazione sono presenti quattro tipologie di \textit{Fragment}:
+\begin{itemize}
+\item \textbf{ReadFragment}: consente all'utente di leggere i messaggi presenti nel \textit{DB} del dispositivo mobile raggruppati per \textit{Topic}. All'avvio viene invocato un \textit{AsyncTask} per popolare una \textit{listView} (presente sul layout \textit{activity\_Read}) contenente tutti i \textit{Topic} a cui l'utente si \'e sottoscritto. All'interno dell'\textit{Async-Task}, per recuperare i dati dal \textit{DB} viene invocato il metodo \textit{getAllTopicFilter} della classe \textit{DBHelper}.
+Alla selezione di un \textit{item} della lista viene eseguito il secondo \textit{AsyncTask}, il quale popoler\'a nuovamente la \textit{listView} con le notifiche presenti nel \textit{DB} relative a quel \textit{Topic}.
+All'interno dell'\textit{AsyncTask}, per recuperare le notifiche dal \textit{DB}, relative al \textit{Topic} selezionato, viene invocato il metodo \textit{getFilteredMessageByTopicName} della classe \textit{DBHelper}.
+\item \textbf{WriteFragment}: consente all'utente di pubblicare notifiche sui \textit{Topic} attualmente esistenti o di crearne di nuovi. All'avvio viene invocato un \textit{AsyncTask} per popolare una \textit{listView} (presente sul layout \textit{activity\_write}) contenente tutti i \textit{Topic} attualmente nel sistema. All'interno dell'\textit{AsyncTask} viene invocato il metodo \textit{getTopicList}, fornito dalla classe \textit{Util}, per contattare il server con il fine di ottenere la lista dei \textit{Topic} presenti nel sistema. Ogni \textit{item} della \textit{listView} pu\'o essere selezionato per inviare una notifica su quel \textit{Topic}: questa fase richiede la collaborazione con l'utente, il quale dovr\'a scrivere il testo della notifica per poi confermarne l'invio. La notifica viene formattata utilizzando il metodo \textit{publish} della classe \textit{Util}, ed inviata con l'utilizzo dell' \textit{API AWS SDK sendMessageToQueue} specificando la coda \textit{notificationQueue} in quest'ultima. 
+\\La creazione di nuovi \textit{Topic} \'e possibile in pochi passi:
+\begin{itemize}
+\item	L'utente seleziona un tasto presente sull'\textit{activity\_write};
+\item	compare a schermo una finestra di dialogo in cui inserire il nome del nuovo \textit{Topic};
+\item 	se si conferma l'operazione, viene inviata una richiesta di creazione \textit{Topic} al server con l'utilizzo dell'\textit{API AWS SDK sendMessageToQueue} verso la coda \textit{creationQueue}. La creazione del \textit{Topic} \'e cos\'i 		demandata al server che gestisce la richiesta come spiegato in precedenza.
+\end{itemize}
+
+\item \textbf{SetFilterFragment}: consente all'utente di sottoscriversi ad i \textit{Topic} attualmente esistenti. All'avvio viene invocato un \textit{AsyncTask} per popolare una \textit{gridView} (presente sul layout \textit{activity\_set\_filter}) contenente per ogni \textit{Topic} attualmente nel sistema il filtro di sottoscrizione associato. All'interno dell'\textit{AsyncTask} si eseguono i seguenti passi:
+\begin{itemize}
+\item 	Viene invocato il metodo \textit{getTopicList}, fornito dalla classe \textit{Util}, per contattare il server con il fine di ottenere la lista dei \textit{Topic} presenti nel sistema;
+\item	vengono salvati gli eventuali nuovi \textit{Topic} all'interno del \textit{DB}, utilizzando il metodo \textit{insertNotExistTableTopic} della classe \textit{DBHelper};
+\item	si recupera la lista di tutti i \textit{Topic}, ciascuno con l'eventuale filtro associato.
+\item si popola la \textit{gridView}.
+\end{itemize}
+L'utente pu\'o selezionare ciascun \textit{item} della griglia per cambiare il filtro corrispondente a quel \textit{Topic}, o per richiedere una nuova sottoscrizione. Se si conferma l'operazione, viene inviata una richiesta di sottoscrizione \textit{Topic} al server con l'utilizzo dell'\textit{API AWS SDK sendMessageToQueue} verso la coda \textit{subscriptonQueue}.
+
+
+
+\item \textbf{SettingsFragment}
+\end{itemize}
+
 \subsubsection{\textit{MainActivity}}
 
  
